fix shape overlap

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -120,7 +120,7 @@
             width: 98px;
             position: absolute;
             left: -6px;
-            bottom: -40px;
+            bottom: -80px;
         }
         .feature {
             padding: 14px 24px;
